tests/baselines/reference/destructuredLateBoundNameHasCorrectTypes.errors.txt
tests/cases/compiler/destructuredLateBoundNameHasCorrectTypes.ts(11,8): error TS2339: Property 'prop2' does not exist on type '{ prop: string; }'.


==== tests/cases/compiler/destructuredLateBoundNameHasCorrectTypes.ts (1 errors) ====
    let { [Symbol.iterator]: destructured } = [];
    void destructured;
    
    const named = "prop";
    
    let { [named]: computed } = { prop: "b" };
    void computed;
    
    const notPresent = "prop2";
    
    let { [notPresent]: computed2 } = { prop: "b" };
           ~~~~~~~~~~
!!! error TS2339: Property 'prop2' does not exist on type '{ prop: string; }'.
    